traces/bug_215.txt
src/medit/ellipse.c:173: error: DEAD_STORE
  The value written to &uy (type float) is never used.
Showing all 1 steps of the trace


src/medit/ellipse.c:173:3: Write of unused value
171.   
172.     ux = 0.0f;
173.     uy = radius;
         ^
174.   
175.     glBegin(GL_LINE_STRIP);
